@@ -1,4 +1,5 @@
 Version 1.5
+ - Pull Request #744 - Add 2gig CT50e thermostat with USNAP RTZW-01 module from neudorf
  - Pull Request #743 - Updated Fibaro Devices from Navstev0 (Justin)
  - Pull Request #740 - Updated Fibaro FGMS-001 ID's from Technosf (Justin)
  - Pull Request #750 - Fix FreeBSD 10.1 and 10.2 Builds from stromnet (Justin)
